<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_marginRight="@dimen/rstep1_margin_to_screen_side"
        android:layout_marginLeft="@dimen/rstep1_margin_to_screen_side"
        android:layout_marginTop="@dimen/rstep1_margin_to_top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rstep1_et_countrycode"
            android:background="@drawable/mytheme_edit_text_holo_light"
            android:singleLine="true"
            android:text="@string/tv_countrycode"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/rstep1_et"
            android:layout_weight="8"
            android:background="@drawable/mytheme_edit_text_holo_light"
            android:hint="@string/et_hint_input_phonenum"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/rstep1_bt_next"
        style="@style/bt_default"
        android:layout_marginRight="@dimen/rstep1_margin_to_screen_side"
        android:layout_marginLeft="@dimen/rstep1_margin_to_screen_side"
        android:layout_marginTop="@dimen/rstep1_margin_to_top"
        android:text="@string/bt_nextstep"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bt_height_default" />

</LinearLayout>