<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_iv"
        android:contentDescription="@string/view_iwant_cover_content"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/login_bt_margin_to_bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_bt_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_height_default"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/login_bt_margin_to_screen_center"
            android:layout_marginLeft="@dimen/login_bt_margin_to_screen_side"
            android:gravity="center_horizontal|center_vertical"
            style="@style/bt_default"
            android:text="@string/bt_login"
            />

        <Button
            android:id="@+id/login_bt_register"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/login_bt_margin_to_screen_side"
            android:layout_marginLeft="@dimen/login_bt_margin_to_screen_center"
            android:gravity="center_horizontal|center_vertical"
            style="@style/bt_default"
            android:text="@string/bt_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/bt_height_default" />
    </LinearLayout>



</LinearLayout>